# receding_planar_sys

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  package.xml
include/: kbhit.h  state_intp.hpp
launch/: default_calibration_frames.launch  interactive_experiment.vcg  interactive_robot.rviz  interactive_robot.vcg  one_robot.vcg  planar_cl_controller.launch  planar_cl_simulator.launch  reference_params.yaml   single_robot_simulator.launch  test.launch  world_limits.yaml
src/: basic_controls.cpp  basic_controls.py  ekf.py  emergency_stopper_joy.py  interactive_marker_ref_gen.cpp  interactive_marker_ref_gen.py  marker_path.py  optimizer.py  receding_controller.py  receding_coordinator.cpp  reference_manager.py  system_definition.py  tools.py  video_recorder.cpp
